After confirming connection string to azure api

--- a/HololiveConcertBlazorServer/appsettings.json
+++ b/HololiveConcertBlazorServer/appsettings.json
@@ -6,10 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "",
+  "ApiUrl": "https://hololiveconcerts.azurewebsites.net/api/",
   "DemoAuth": {
-    "UserKey": "",
-    "ApiKey": ""
+    "UserKey": "ThisIsTheDemoHardCodedUserKey",
+    "ApiKey": "ThisIsTheDemoHardCodedApiKey"
   }
-
 }
